# MGA802_Groupe_PF_05_WindFarmPlacement

./: .gitattributes  .gitignore  LICENSE.md  README-dev.md  README.md  Setup.cfg  WindMean.py  clean.py  data.sh  exec_time.py  flat_zone_finder.py  main.py  parameters.yaml  plot.py  requirements.txt  setup.cfg  station.py  studyarea.py  test.py  topography.py  topography_old.py  windfield.py  windhistory.py  windmill.py
Wind/: __init__.py  utils.py  windhistory.py
WindFarm/: __init__.py  studyarea.py
WindFarm/Wind/: __init__.py  station.py  utils.py  windhistory.py  windmill.py
WindFarmPlacement/: WindFarmPlacement.py  __init__.py  elevationdata.py  studyarea.py  topography.py  utils.py  windfarmplacement.py
WindFarmPlacement.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
WindFarmPlacement/WeatherData/: FastHistoryMonthProcess.py  FastInterpolation.py  FastMonthHistory.py  __init__.py  fasthistorymonthprocess.py  fasthistoryyearprocess.py  multi_threading.py  station.py  windhistory.py
WindFarmPlacement/WindFarm/: __init__.py  windfarm.py  windmill.py
archive/: station.py  studyarea.py  windfield.py
data/10076/2018/: 8_T_W.csv
data/10076/2020/: Daily_T_W.csv
data/10076/2022/: Daily_T_W.csv
data/10078/2018/: 11_T_W.csv  5_T_W.csv  7_T_W.csv  Daily_T_W.csv
data/10078/2019/: Daily_T_W.csv
data/10078/2020/: Daily_T_W.csv
data/10078/2021/: Daily_T_W.csv
data/10078/2023/: Daily_T_W.csv
data/10091/2018/: 10_T_W.csv  2_T_W.csv  6_T_W.csv  7_T_W.csv  8_T_W.csv  Daily_T_W.csv
data/10091/2020/: Daily_T_W.csv
data/10104/2018/: 4_T.csv  (+4 more)
examples/: exec_time.py  exec_time.yaml  main.py  plot.py  plot_weibull.yaml  template.yaml
figures/: .gitkeep
source/: WindFarmPlacement.WeatherData.rst  conf.py  exec_time.rst  index.rst  modules.rst  setup.rst
(+78806 files in other folders)
