[metadata]
name = WindFarmPlacement
version = 1.0
author = Bernabeu Léo, Mullins Mathieu, Da Costa Dias André
description = Projet spécial dans le cadre du cours MGA802
long_description = Etude de l’optimisation du choix d’un parc éolien en fonction des besoins utilisateur.
url = ''
keywords = windfarm, placement, setuptools, weather_data, wind_history, station_choice, topography, optimisation

[options]
python_requires = >=3.7
install_requires =
    matplotlib
    numpy
    pandas
    requests
    scipy