[metadata]
name = WindFarmPlacement
version = 1.0
author = Bernabeu Léo, Mullins Mathieu, Da Costa Dias André
description = Projet spécial dans le cadre du cours MGA802
long_description = Etude de l’optimisation du choix d’un parc éolien en fonction des besoins utilisateur.
url = ''
keywords = windfarm, placement, weather_data, wind_history, topography, optimisation

[options]
exclude =
    data
    figures
packages =
    WindFarmPlacement
python_requires = >=3.7
install_requires =
    matplotlib==3.7.1
    numpy>=1.24.3
    pandas>=2.0.1
    requests==2.31.0
    scipy>=1.10.1
    PyYAML==6.0